kubernetes/clusters/homelab/infrastructure/traefik/config/lan-allowlist-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-allowlist
  namespace: traefik
spec:
  ipAllowList:
    sourceRange:
      - 192.168.0.0/16
