kubernetes/clusters/homelab/infrastructure/traefik/config/dashboard-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.lan.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-lan-allowlist
        - name: traefik-authentik
  tls: {}
